--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetalleVenta/Edit.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/DetalleVenta/Edit.cshtml
@@ -2,72 +2,93 @@
 
 @{
     ViewData["Title"] = "Edit";
-    List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Venta> ventas = ViewBag.Ventas as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Venta>;
+    List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Venta> ventas = ViewBag.Venta as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Venta>;
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto> productos = ViewBag.Producto as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Producto>;
 }
 
-<div class="card shadow mb-4">
-    <div class="card-header py-3">
-        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Modificar Detalles de Ventas</h1>
-    </div>
-    <div class="card-body">
-        <form asp-action="Edit" class="container" method="post">
+<h1>Modificar</h1>
+
+<h4>Detalle Ventas</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdDetalleVenta" class="form-control" />
-
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label asp-for="CodigoDetalles" class="control-label">Código de Detalles</label>
-                        <input asp-for="CodigoDetalles" class="form-control" />
-                        <span asp-validation-for="CodigoDetalles" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label asp-for="Cantidad" class="control-label">Cantidad</label>
-                        <input asp-for="Cantidad" class="form-control" />
-                        <span asp-validation-for="Cantidad" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label asp-for="Total" class="control-label">Total $</label>
-                        <input asp-for="Total" class="form-control" />
-                        <span asp-validation-for="Total" class="text-danger"></span>
-                    </div>
-                </div>
+            <div class="form-group">
+                <label asp-for="Cantidad" class="control-label"></label>
+                <input asp-for="Cantidad" class="form-control" />
+                <span asp-validation-for="Cantidad" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ValorTotal" class="control-label"></label>
+                <input asp-for="ValorTotal" class="form-control" />
+                <span asp-validation-for="ValorTotal" class="text-danger"></span>
             </div>
 
-
             <div class="row">
+
                 <div class="col-md-4">
                     <div class="form-group">
-                        <label asp-for="IdVenta" class="control-label">Factura</label>
-                        <select asp-for="IdVenta" asp-items="@(new SelectList(ventas, "IdVenta", "NumeroFactura"))" class="form-control"></select>
-                        <span asp-validation-for="IdVenta" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label asp-for="IdProducto" class="control-label">Producto</label>
-                        <select asp-for="IdProducto" asp-items="@(new SelectList(productos, "IdProducto", "Nombre"))" class="form-control"></select>
+                        <label asp-for="IdProducto" class="control-label"></label>
+                        <select asp-for="IdProducto" class="form-control">
+                            <option selected value="">SELECCIONAR</option>
+                            @foreach (var item in productos)
+                            {
+                                if (Model.IdProducto == item.IdProducto)
+                                {
+                                    <option selected value="@item.IdProducto">@item.Nombre</option>
+                                }
+                                else
+                                {
+                                    <option value="@item.IdProducto">@item.Nombre</option>
+                                }
+                            }
+                        </select>
                         <span asp-validation-for="IdProducto" class="text-danger"></span>
                     </div>
                 </div>
             </div>
+            <div class="row">
+
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="IdVenta" class="control-label"></label>
+                        <select asp-for="IdVenta" class="form-control">
+                            <option selected value="">SELECCIONAR</option>
+                            @foreach (var item in ventas)
+                            {
+                                if (Model.IdVenta == item.IdVenta)
+                                {
+                                    <option selected value="@item.IdVenta">@item.NumeroVenta</option>
+                                }
+                                else
+                                {
+                                    <option value="@item.IdVenta">@item.NumeroVenta</option>
+                                }
+                            }
+                        </select>
+                        <span asp-validation-for="IdVenta" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+
+
+            @*BOTONES EDITADOS CON ICONOS*@
 
             <div class="form-group" style="margin-top: 10px;">
                 <button type="submit" class="btn btn-success" style="margin-right: 10px;">
                     <i class="fas fa-save"></i> Guardar
                 </button>
-                <a class="btn btn-danger" asp-action="Index" style="margin-left: 10px;">
+
+                <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
                     <i class="fas fa-times"></i> Cancelar
-                </a>
+                </button>
             </div>
         </form>
     </div>
 </div>
+
 
 @section Scripts {
     @{
