--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
                         <div class="bg-white py-2 collapse-inner rounded">
                             <a class="collapse-item" asp-area="" asp-controller="Venta" asp-action="Index">Ventas</a>
                             <a class="collapse-item" asp-area="" asp-controller="DetalleVenta" asp-action="Index">Detalles de Ventas</a>
-                            <a class="collapse-item" asp-area="" asp-controller="DetalleVenta" asp-action="Ventas">Formulario de Ventas</a>
+                            <a class="collapse-item" asp-area="" asp-controller="DetalleVenta" asp-action="Venta">Formulario de Ventas</a>
                         </div>
                     </div>
                 </li>
