--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Venta/Create.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Venta/Create.cshtml
@@ -5,97 +5,110 @@
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Usuario> usuarios = ViewBag.Usuarios as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Usuario>;
 }
 
-<div class="card shadow mb-4">
-    <div class="card-header py-3">
-        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Crear Venta Manual</h1>
-    </div>
-    <div class="card-body">
-        <div class="row">
-            <div class="col-md-8">
-                <form asp-action="Create">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<h1>Crear Venta</h1>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                    <div class="form-row">
-                        <div class="form-group col-md-4">
-                            <label asp-for="Descuento" class="control-label">Descuento</label>
-                            <input asp-for="Descuento" class="form-control" />
-                            <span asp-validation-for="Descuento" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label asp-for="Impuesto" class="control-label">Impuesto</label>
-                            <input asp-for="Impuesto" class="form-control" />
-                            <span asp-validation-for="Impuesto" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label asp-for="SubTotal" class="control-label">SubTotal $</label>
-                            <input asp-for="SubTotal" class="form-control" />
-                            <span asp-validation-for="SubTotal" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label asp-for="Total" class="control-label">Total $</label>
-                            <input asp-for="Total" class="form-control" />
-                            <span asp-validation-for="Total" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="form-group col-md-4">
-                            <label asp-for="NombreCliente" class="control-label">Nombre del Cliente</label>
-                            <input asp-for="NombreCliente" class="form-control" />
-                            <span asp-validation-for="NombreCliente" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label asp-for="DireccionCliente" class="control-label">Dirección del Cliente</label>
-                            <input asp-for="DireccionCliente" class="form-control" />
-                            <span asp-validation-for="DireccionCliente" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label asp-for="TelefonoCliente" class="control-label">Teléfono del Cliente</label>
-                            <input asp-for="TelefonoCliente" class="form-control" />
-                            <span asp-validation-for="TelefonoCliente" class="text-danger"></span>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-4">
-                            <label asp-for="DUICliente" class="control-label">DUI del Cliente</label>
-                            <input asp-for="DUICliente" class="form-control" />
-                            <span asp-validation-for="DUICliente" class="text-danger"></span>
-                        </div>
-
-                        <div class="form-group col-md-4">
-                            <label asp-for="IdUsuario" class="control-label">Usuario</label>
-                            <select asp-for="IdUsuario" class="form-control">
-                                <option selected value="">SELECCIONAR</option>
-                                @foreach (var item in usuarios)
-                                {
-                                    <option value="@item.Id">@item.Nombre</option>
-                                }
-                            </select>
-                            <span asp-validation-for="IdUsuario" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="form-group" style="margin-top: 10px;">
-                        <button type="submit" class="btn btn-success" style="margin-right: 10px;">
-                            <i class="fas fa-save"></i> Guardar
-                        </button>
-
-                        <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
-                            <i class="fas fa-times"></i> Cancelar
-                        </button>
-                    </div>
-
-                    <span class="text-danger">@ViewBag.Error</span>
-                </form>
+            <div class="form-group">
+                <label asp-for="NumeroVenta" class="control-label"></label>
+                <input asp-for="NumeroVenta" class="form-control" />
+                <span asp-validation-for="NumeroVenta" class="text-danger"></span>
             </div>
-        </div>
+            @* <div class="form-group">
+            <label asp-for="FechaFacturacion" class="control-label"></label>
+            <input asp-for="FechaFacturacion" class="form-control" />
+            <span asp-validation-for="FechaFacturacion" class="text-danger"></span>
+            </div>*@
+
+            <div class="form-group">
+                <label asp-for="NombreCliente" class="control-label"></label>
+                <input asp-for="NombreCliente" class="form-control" />
+                <span asp-validation-for="NombreCliente" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DireccionCliente" class="control-label"></label>
+                <input asp-for="DireccionCliente" class="form-control" />
+                <span asp-validation-for="DireccionCliente" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TelefonoCliente" class="control-label"></label>
+                <input asp-for="TelefonoCliente" class="form-control" />
+                <span asp-validation-for="TelefonoCliente" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DUICliente" class="control-label"></label>
+                <input asp-for="DUICliente" class="form-control" />
+                <span asp-validation-for="DUICliente" class="text-danger"></span>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label asp-for="FormaPago" class="control-label"></label>
+                    <select asp-for="FormaPago" class="form-control">
+                        <option value="">SELECCIONAR</option>
+                        <option selected value="1">EFECTIVO</option>
+                        <option value="2">TARJETA</option>
+                    </select>
+                    <span asp-validation-for="FormaPago" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Total" class="control-label"></label>
+                <input asp-for="Total" class="form-control" />
+                <span asp-validation-for="Total" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Descuento" class="control-label"></label>
+                <input asp-for="Descuento" class="form-control" />
+                <span asp-validation-for="Descuento" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Impuesto" class="control-label"></label>
+                <input asp-for="Impuesto" class="form-control" />
+                <span asp-validation-for="Impuesto" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TotalPagado" class="control-label"></label>
+                <input asp-for="TotalPagado" class="form-control" />
+                <span asp-validation-for="TotalPagado" class="text-danger"></span>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label asp-for="IdUsuario" class="control-label"></label>
+                        <select asp-for="IdUsuario" class="form-control">
+                            <option selected value="">SELECCIONAR</option>
+                            @foreach (var item in usuarios)
+                            {
+                                <option value="@item.Id">@item.Nombre</option>
+                            }
+                        </select>
+                        <span asp-validation-for="IdUsuario" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+
+            @*BOTONES DE GUARDAR Y SALIR*@
+            <div class="form-group" style="margin-top: 10px;">
+                <button type="submit" class="btn btn-success" style="margin-right: 10px;">
+                    <i class="fas fa-save"></i> Guardar
+                </button>
+
+                <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Index")'" style="margin-left: 10px;">
+                    <i class="fas fa-times"></i> Cancelar
+                </button>
+            </div>
+
+            <span class="text-danger">@ViewBag.Error</span>
+
+        </form>
     </div>
 </div>
+
+
 
 @section Scripts {
     @{
