--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Venta/Index.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Venta/Index.cshtml
@@ -9,122 +9,217 @@
     int topActual = Convert.ToInt32(ViewBag.Top);
     List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Usuario> usuarios = ViewBag.Usuarios as List<SysInventarioFacturacionAgro.EntidadesDeNegocio.Usuario>;
 }
-
-<div class="card shadow mb-4">
-    <div class="card-header py-3">
-        <h1 class="m-0 font-weight-bold text-primary" style="font-size: 1.5rem;">Buscar Venta</h1>
-    </div>
-    <div class="card-body">
-        <div class="row">
-            <div class="col-md-12">
-                <form asp-action="Index">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                <label class="control-label">Usuario</label>
-                                <select name="IdUsuario" class="form-control">
-                                    <option selected value="0">SELECCIONAR</option>
-                                    @foreach (var item in usuarios)
-                                    {
-                                        <option value="@item.Id">@item.Nombre</option>
-                                    }
-                                </select>
-                            </div>
-                        </div>
+<h1>Buscar</h1>
+<div class="row">
+    <div class="col-md-12">
+        <form asp-action="Index">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label class="control-label">Usuario</label>
+                        <select name="IdUsuario" class="form-control">
+                            <option selected value="0">SELECCIONAR</option>
+                            @foreach (var item in usuarios)
+                            {
+                                <option value="@item.Id">@item.Nombre</option>
+                            }
+                        </select>
                     </div>
-
-                    <div class="form-group" style="margin-top: 10px;">
-                        <button type="submit" class="btn btn-primary" style="background-color: #0074D9; color: white;">
-                            <i class="fas fa-search"></i> Buscar
-                        </button>
-
-                        <button type="button" class="btn btn-success" onclick="window.location.href='@Url.Action("Create")'">
-                            <i class="fas fa-plus"></i> Agregar
-                        </button>
+                </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label class="control-label">Top</label>
+                        <select name="top_aux" class="form-control">
+                            @foreach (var item in tops)
+                            {
+                                string strItem = item != -1 ? item.ToString() : "Todos";
+                                if (item != topActual)
+                                {
+                                    <option value="@item">@strItem</option>
+                                }
+                                else
+                                {
+                                    <option selected value="@item">@strItem</option>
+                                }
+                            }
+                        </select>
                     </div>
-                </form>
-            </div>
-        </div>
-
-        <div class="table-responsive paginationjs">
-            <table class="table table-bordered" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>@Html.DisplayNameFor(model => model.NumeroFactura)</th>
-                        <th>@Html.DisplayNameFor(model => model.FechaFacturacion)</th>
-                        <th>@Html.DisplayNameFor(model => model.Descuento)</th>
-                        <th>@Html.DisplayNameFor(model => model.Impuesto)</th>
-                        <th>@Html.DisplayNameFor(model => model.SubTotal)</th>
-                        <th>@Html.DisplayNameFor(model => model.Total)</th>
-                        <th>@Html.DisplayNameFor(model => model.NombreCliente)</th>
-                        <th>@Html.DisplayNameFor(model => model.DireccionCliente)</th>
-                        <th>@Html.DisplayNameFor(model => model.TelefonoCliente)</th>
-                        <th>@Html.DisplayNameFor(model => model.DUICliente)</th>
-                        <th>@Html.DisplayNameFor(model => model.IdUsuario)</th>
-                        <th colspan="3">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr data-page="@numPage">
-                            <td>@Html.DisplayFor(modelItem => item.NumeroFactura)</td>
-                            <td>@Html.DisplayFor(modelItem => item.FechaFacturacion)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Descuento)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Impuesto)</td>
-                            <td>@Html.DisplayFor(modelItem => item.SubTotal)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Total)</td>
-                            <td>@Html.DisplayFor(modelItem => item.NombreCliente)</td>
-                            <td>@Html.DisplayFor(modelItem => item.DireccionCliente)</td>
-                            <td>@Html.DisplayFor(modelItem => item.TelefonoCliente)</td>
-                            <td>@Html.DisplayFor(modelItem => item.DUICliente)</td>
-                            @*<td>@Html.DisplayFor(modelItem => item.IdUsuario)</td>*@
-                            <td>@usuarios.FirstOrDefault(u => u.Id == item.IdUsuario)?.Nombre</td>
-
-
-                            <td class="botonestabla">
-                                <button type="button" class="btn btn-primary" style="background-color: #264DA0; color: white" onclick="window.location.href='@Url.Action("Edit", new { IdVenta = item.IdVenta })'">
-                                    <i class="fas fa-pencil-alt"></i> Modificar
-                                </button>
-                            </td>
-
-                            <td class="botonestabla">
-                                <button type="button" class="btn btn-info" onclick="window.location.href='@Url.Action("Details", new { IdVenta = item.IdVenta })'">
-                                    <i class="fas fa-eye"></i> Detalles
-                                </button>
-                            </td>
-                            <td class="botonestabla">
-                                <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Delete", new { IdVenta = item.IdVenta })'">
-                                    <i class="fas fa-trash"></i> Eliminar
-                                </button>
-                            </td>
-                        </tr>
-
-                        numRegistros++;
-                        if (numRegistros == numRegistrosPorPage)
-                        {
-                            numPage++;
-                            numRegistros = 0;
-                        }
-                    }
-                </tbody>
-            </table>
-        </div>
-
-        @if (numPage > 1)
-        {
-            <div class="row" style="overflow:auto">
-                <div class="col-md-12">
-                    <ul class="pagination paginationjs" data-numpage="@numPage" data-pageactive="1">
-                        <li class="page-item" data-typepage="Previous"><a class="page-link" href="#">Previous</a></li>
-                        @for (var i = 1; i <= numPage; i++)
-                        {
-                            <li class="page-item" data-page="@i" data-typepage="Item"><a class="page-link" href="#">@i</a></li>
-                        }
-                        <li class="page-item" data-typepage="Next"><a class="page-link" href="#">Next</a></li>
-                    </ul>
                 </div>
             </div>
-        }
+
+            @*BOTONES BUSCAR Y AGREGAR*@
+
+            <div class="form-group" style="margin-top: 10px;">
+                <button type="submit" class="btn btn-primary" style="background-color: #0074D9; color: white;">
+                    <i class="fas fa-search"></i> Buscar
+                </button>
+
+
+                <button type="button" class="btn btn-success" onclick="window.location.href='@Url.Action("Create")'">
+                    <i class="fas fa-plus"></i> Agregar
+                </button>
+            </div>
+
+        </form>
     </div>
 </div>
+
+<table class="table table-responsive paginationjs">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.NumeroVenta)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FechaVenta)
+
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.NombreCliente)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DireccionCliente)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TelefonoCliente)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DUICliente)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FormaPago)
+
+            </th>
+           
+            <th>
+                @Html.DisplayNameFor(model => model.Total)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Descuento)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Impuesto)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.TotalPagado)
+
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IdUsuario)
+
+            </th>
+            <th colspan="3">Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr data-page="@numPage">
+                <td>
+                    @Html.DisplayFor(modelItem => item.NumeroVenta)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FechaVenta)
+                </td>
+
+                <td>
+                    @Html.DisplayFor(modelItem => item.NombreCliente)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DireccionCliente)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TelefonoCliente)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DUICliente)
+                </td>
+                @if (item.FormaPago == 1)
+                {
+                    <td>EFECTIVO</td>
+                }
+                else if (item.FormaPago == 2)
+                {
+                    <td>TARJETA</td>
+                }
+                else
+                {
+                    <td></td>
+                }
+                <td>
+                    @Html.DisplayFor(modelItem => item.Total)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descuento)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Impuesto)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TotalPagado)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario.Nombre)
+                </td>
+
+                @*BOTONES DE EDITAR, DETALLES Y ELIMINAR*@
+
+                <td class="botonestabla">
+                    <button type="button" class="btn btn-primary" style="background-color: #264DA0; color: white" onclick="window.location.href='@Url.Action("Edit", new { IdVenta = item.IdVenta })'">
+                        <i class="fas fa-pencil-alt"></i> Modificar
+                    </button>
+                </td>
+
+
+                <td class="botonestabla">
+                    <button type="button" class="btn btn-info" onclick="window.location.href='@Url.Action("Details", new { IdVenta = item.IdVenta })'">
+                        <i class="fas fa-eye"></i> Detalles
+                    </button>
+                </td>
+                <td class="botonestabla">
+                    <button type="button" class="btn btn-danger" onclick="window.location.href='@Url.Action("Delete", new { IdVenta = item.IdVenta })'">
+                        <i class="fas fa-trash"></i> Eliminar
+                    </button>
+                </td>
+
+            </tr>
+
+            numRegistros++;
+            if (numRegistros == numRegistrosPorPage)
+            {
+                numPage++;
+                numRegistros = 0;
+            }
+        }
+        @{
+            if (numRegistros == 0)
+            {
+                numPage--;
+            }
+        }
+    </tbody>
+</table>
+@if (numPage > 1)
+{
+    <div class="row" style="overflow:auto">
+        <div class="col-md-12">
+            <ul class="pagination paginationjs" data-numpage="@numPage" data-pageactive="1">
+                <li class="page-item" data-typepage="Previous"><a class="page-link" href="#">Previous</a></li>
+                @for (var i = 1; i <= numPage; i++)
+                {
+                    <li class="page-item" data-page="@i" data-typepage="Item"><a class="page-link" href="#">@i</a></li>
+                }
+                <li class="page-item" data-typepage="Next"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </div>
+    </div>
+}
