--- a/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
+++ b/SysInventarioFacturacionAgro.UI.AppWebAspNetCore/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/Home.css">
     <link rel="stylesheet" href="~/css/Menu.css">
-    <link rel="stylesheet" href="~/css/Inicio.css">
-    <link rel="stylesheet" href="~/css/Venta.css">*@
+    <link rel="stylesheet" href="~/css/Inicio.css">*@
+    <link rel="stylesheet" href="~/css/Venta.css">
    
     @*PLANTILLA DE ESTILOS - TEMPLATE*@
 
